--- a/src/components/Popup/Popup.scss
+++ b/src/components/Popup/Popup.scss
@@ -1,4 +1,42 @@
-.popup-wrapper{
+.popup{
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
   display: flex;
-  background-color: red;
+  align-items: center;
+  justify-content: center;
+
+  &__wrapper {
+    background-color: #fff;
+    border-radius: 5px;
+    padding: 20px;
+    max-width: 500px;
+    text-align: center;
+  }
+
+  &__success {
+    color: green;
+
+  }
+
+  &__error {
+    color: red;
+  }
+
+  &__confirm {
+    color: lightsalmon;
+  }
+
+  button {
+    background-color: #fff;
+    border: none;
+    outline: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    margin: 0 10px;
+  }
 }
